--- a/src/styles/player-display.css
+++ b/src/styles/player-display.css
@@ -80,9 +80,9 @@
 
 .selection-container {
     margin: auto;
-    max-width: clamp(800px, 35vw, 1800px);
+    max-width: clamp(800px, 40vw, 1800px);
     display: grid;
-    width: 50%;
+    width: auto;
     grid-template-columns: repeat(3, 1fr); /* 3 rows of equal height */
     align-items: center;
     justify-content: center; /* Center items */
@@ -108,10 +108,10 @@
     border: 3px solid #444;
     border-radius: 40%;
     margin: auto;
-    width: 100%;
-    height: 0;
-    padding-bottom: 100%; /* This forces the height to be equal to the width */
-    position: relative;
+    width: 20vw;
+    height: 20vw;
+    max-width: 100px;
+    max-height: 100px;
 }
 
 .color-swatch.selected {
@@ -121,7 +121,7 @@
 .remove-player-btn {
     color: red;
     font-family: monospace;
-    font-size: clamp(16px, 5vw, 32px);
+    font-size: clamp(16px, 5vw, 72px);
     margin: auto;
     border-radius: clamp(4px, 5vw, 48px);
     background-color: #000;
